cmake_minimum_required(VERSION 3.0)

SET(CMAKE_SYSTEM_NAME Generic)

set(SEGASGL_DESTINATION samples/sample1)
set(INSTALL_DESTINATION ${SEGASGL_DESTINATION})

set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")
set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "")
set(CMAKE_EXE_LINKER_FLAGS "")
set(CMAKE_STATIC_LIBRARY_SUFFIX ".a")
set(CMAKE_STATIC_LIBRARY_PREFIX "")

set(SEGALIB $ENV{SATURN_SBL}/segalib)
set(SEGASGL $ENV{SATURN_SGL})

set(SATURN_COMMON $ENV{SATURN_COMMON})
set(SATURN_CMAKE $ENV{SATURN_CMAKE})

project( sample VERSION 1.0
                  DESCRIPTION "Sega Saturn SGL samples"
                  LANGUAGES C ASM)

set(as_flags )
set(c_flags -Wall -m2 -MMD)

add_subdirectory(akira)
add_subdirectory(akira3)
add_subdirectory(demo_a)
add_subdirectory(demo_b)
add_subdirectory(demo_c)
add_subdirectory(demo_d)
add_subdirectory(demogun)
add_subdirectory(design1)
add_subdirectory(design2)
add_subdirectory(design3)
add_subdirectory(driving)
add_subdirectory(driving2)
add_subdirectory(fighting)
add_subdirectory(s_2_2)
add_subdirectory(s_3_2)
add_subdirectory(s_4_2)
add_subdirectory(s_4_3_1)
add_subdirectory(s_4_3_2)
add_subdirectory(s_4_3_3)
add_subdirectory(s_4_3_4)
add_subdirectory(s_4_5)
add_subdirectory(s_5_2)
add_subdirectory(s_6_3)
add_subdirectory(s_7_2)
add_subdirectory(s_7_4)
add_subdirectory(s_7_6)
add_subdirectory(s_8_8_1)
add_subdirectory(s_8_8_2)
add_subdirectory(s_8_8_3)
add_subdirectory(s_8_9_1)
add_subdirectory(s_8_9_2)
add_subdirectory(s_8_10_1)
add_subdirectory(s_8_10_2)
add_subdirectory(s_8_11)
add_subdirectory(s_8_12)
add_subdirectory(s_9_1)
add_subdirectory(s_10)
add_subdirectory(s_cd1)
add_subdirectory(s_cd2)
add_subdirectory(s_cd3)
add_subdirectory(s_cd4)
add_subdirectory(sampsnd1)
add_subdirectory(sampsnd2)
add_subdirectory(sbklib)
add_subdirectory(shooting)
add_subdirectory(torus2)
add_subdirectory(torus3)
